changed name of the image game over

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </style>
 </head>
 <body>
-  <img class="death-screen" src="source/_.png">
+  <img class="death-screen" src="source/gameover.png">
   <img class="game-cover" src="source/anti-point grind.jpg">
   <img class="restart" src="source/button.png">
   <audio class="death-sound" src="source/dark-souls-you-died-sound-effect_hm5sYFG.mp3" ></audio>
